# lite_encoding

./: CMakeLists.txt  LICENSE  README.md  lite_encoding.c  lite_encoding.h
test/: test.c
